--- a/config2.toml
+++ b/config2.toml
@@ -3,7 +3,7 @@ languageCode = "en-us"
 theme = "hugo-winston-theme"
 themesDir = "themes"
 title = "Hugo Winston Theme"
-pagination.pagerSize = 3
+paginate = 3
 pygmentsCodeFences = true
 pygmentsCodefencesGuessSyntax = true
 pygmentsUseClasses = true
