--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -74,8 +74,8 @@ jobs:
           username: ${{ vars.ftp_username }}
           ssh_private_key: ${{ secrets.ftp_password }}
           # or if you only use a password
-          # sftp_only: true
-          # password: ${{ secrets.ftp_password }}
+          sftp_only: true
+          password: ${{ secrets.ftp_password }}
           port: ${{ vars.ftp_port }}
           remote_path: '/var/www/app' # This will depend on your server
           local_path: './public/*' # This is the path where the artifact is located
