--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -77,5 +77,5 @@ jobs:
           sftp_only: true
           password: ${{ secrets.ftp_password }}
           port: ${{ vars.ftp_port }}
-          remote_path: '/var/www/app' # This will depend on your server
+          remote_path: 'public_html' # This will depend on your server
           local_path: './public/*' # This is the path where the artifact is located
