--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -75,3 +75,4 @@ jobs:
           password: ${{ secrets.ftp_password }}
           port: ${{ vars.ftp_port }}
           local_path: './public/*' # This is the path where the artifact is located
+          remote_path: '/public_html'
