--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -74,4 +74,4 @@ jobs:
           username: ${{ vars.ftp_username }}
           password: ${{ secrets.ftp_password }}
           port: ${{ vars.ftp_port }}
-          local-dir: './public/*'
+          local-dir: './public/'
